<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@drawable/main_background"
    tools:context=".Controller.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="130dp"
            android:layout_height="170dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/profile_icon_radius">

            <ImageView
                android:id="@+id/prof_Icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/ic_male"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/register_here"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/sign_up_first"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
        <TextView
            android:id="@+id/activity_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signUpText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/activity_link"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/input_field_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_link">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@null"
                android:hint="Name"
                android:padding="0dp"
                app:boxStrokeColor="@android:color/darker_gray"
                app:helperText="Required*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_outline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_alternates"
                    android:inputType="text"
                    android:padding="0dp"
                    android:textAllCaps="false"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mailInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@null"
                app:helperText="Required*"
                android:hint="email"
                app:boxStrokeColor="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameInput"
                app:startIconDrawable="@drawable/ic_outline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_alternates"
                    android:inputType="textEmailAddress"
                    android:padding="0dp"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@null"
                android:hint="phone"
                app:helperText="Required*"
                app:boxStrokeColor="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mailInput"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_alternates"
                    android:inputType="phone"
                    android:padding="0dp"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/genderIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_baseline_gender"
                app:layout_constraintBottom_toBottomOf="@id/genderInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/genderInput" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/genderInput"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/phoneInput"
                app:layout_constraintStart_toEndOf="@id/genderIcon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:helperText="Required*"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">

                <AutoCompleteTextView
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:hint="Sex" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <Spinner-->
<!--                android:id="@+id/genderInput"-->
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                android:autofillHints="Gender"-->
<!--                android:spinnerMode="dropdown"-->
<!--                app:layout_constraintStart_toEndOf="@id/genderIcon"-->
<!--                app:layout_constraintTop_toBottomOf="@id/phoneInput" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@null"
                android:hint="@string/password"
                app:boxStrokeColor="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/genderInput"
                app:layout_constraintTop_toTopOf="@id/genderInput"
                app:layout_constraintBottom_toBottomOf="@id/genderInput"
                app:startIconDrawable="@drawable/ic_baseline_more_horiz_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_alternates"
                    android:inputType="textPassword"
                    android:padding="0dp"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@null"
                app:helperText="Required*"
                android:hint="@string/confirm_password"
                app:boxStrokeColor="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:startIconDrawable="@drawable/ic_baseline_more_horiz_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/conPasswordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_alternates"
                    android:inputType="textPassword"
                    android:padding="0dp"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>

<!--            <CheckBox-->
<!--                android:id="@+id/termsCheckBox"-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/confirmPasswordInput" />-->

<!--            <TextView-->
<!--                android:id="@+id/textView3"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/montserrat_alternates"-->
<!--                android:text="@string/i_agree_to_terms_of_service"-->
<!--                android:textSize="12sp"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/termsCheckBox"-->
<!--                app:layout_constraintStart_toEndOf="@id/termsCheckBox"-->
<!--                app:layout_constraintTop_toTopOf="@id/termsCheckBox" />-->

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/montserrat_alternates"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirmPasswordInput" />

            <ImageButton
                android:id="@+id/signUpBtn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/next_button_gradient"
                app:layout_constraintBottom_toBottomOf="@+id/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/register"
                app:srcCompat="@drawable/ic_baseline_navigate_next_24" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>